# KuiklyUISqlite

./: .gitignore  README.md  build.gradle.kts  publishing-github.sh  settings.gradle.kts  settings.ohos.gradle.kts
.kotlin/metadata/kotlinCInteropLibraries/: kuiklySqlite-iosArm64Cinterop-sqlite3Main-1.0.0-pJnmWQ.klib  kuiklySqlite-iosSimulatorArm64Cinterop-sqlite3Main-1.0.0-4udnlA.klib  kuiklySqlite-iosX64Cinterop-sqlite3Main-1.0.0-_9KNpg.klib
.kotlin/metadata/kotlinTransformedCInteropMetadataLibraries/: .shared-iosMain.cinteropLibraries.json
.trae/documents/: Replace Coroutines with Native Multithreading.md
androidApp/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp/KuiklyExpand/Handler/: .h
iosApp/iosApp/KuiklyExpand/Modules/: SandboxPathModule.h  SandboxPathModule.m
kuiklySqlite/: build.gradle.kts  build.ohos.gradle.kts  kuiklySqlite.podspec
kuiklySqlite-compiler/: build.gradle.kts
kuiklySqlite/src/nativeMain/cinterop/: CMakeLists.txt  sqlite3.def
net/shantu/kuiklysqlite/kuiklySqlite-android/: maven-metadata.xml  maven-metadata.xml.sha512
net/shantu/kuiklysqlite/kuiklySqlite-compiler/: maven-metadata.xml  maven-metadata.xml.md5
net/shantu/kuiklysqlite/kuiklySqlite-iosarm64/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
net/shantu/kuiklysqlite/kuiklySqlite-iossimulatorarm64/: maven-metadata.xml.md5  maven-metadata.xml.sha1  (+1 more)
ohosApp/: runOhosApp.sh
ohosApp/AppScope/: app.json5
shared/: build.gradle.kts  build.ohos.gradle.kts
(+276 files in other folders)
